--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,33 @@
 {
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^4.2.0",
-    "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
   "name": "zteach",
-  "description": "Project of ZTeam - Đồ án Nhập môn Công nghệ phần mềm",
   "version": "1.0.0",
+  "description": "Online finding tutors",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon --inspect app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TrucJ/ZTeach.git"
+    "url": "https://github.com/TrucJ/ZTeach.git"
   },
-  "author": "",
+  "keywords": [
+    "Online finding tutors",
+    "I2S",
+    "Group10"
+  ],
+  "author": "Zteam",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TrucJ/ZTeach/issues"
   },
-  "homepage": "https://github.com/TrucJ/ZTeach#readme"
+  "homepage": "https://github.com/TrucJ/ZTeach#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
