--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/TrucJ/ZTeach#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.1"
   },
