--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.2.1",
-    "mongoose": "^6.1.1"
+    "mongoose": "^6.1.1",
+    "react-hook-form": "^7.22.3"
   },
   "devDependencies": {
     "ejs": "^3.1.6",
