--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-hook-form": "^7.22.3",
+    "react-multi-select-component": "^4.1.14",
+    "react-native": "^0.66.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
