--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
+    "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
