--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Online finding tutors",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --inspect app.js",
+    "start": "nodemon --inspect src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.1",
+    "multer": "^1.4.4",
     "react-hook-form": "^7.22.3"
   },
   "devDependencies": {
