--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/TrucJ/ZTeach#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongodb": "^4.2.1",
