--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
+    "firebase": "^9.6.2",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "multer": "^1.4.4",
